--- a/style.css
+++ b/style.css
@@ -162,15 +162,27 @@ h2{
     margin-top: 20px;
 }
 @media (max-width: 768px) {
+    .menu{
+        margin-bottom: 15px;
+    }
     .cad {
-        height: auto; /* Permitir que a altura seja automática em telas menores */
+        height: auto; 
+        padding: 10px; 
     }
 
     h1, h2 {
-        font-size: 1.5em; /* Diminuir o tamanho da fonte em telas menores */
+        font-size: 1.5em; 
     }
 
     input[type="button"] {
-        width: 100%; /* Botões ocupam toda a largura disponível */
+        width: 100%; 
+    }
+
+    div#campo > input, #list > select {
+        width: 100%; 
+    }
+
+    #copy {
+        margin-top: 30px;
     }
 }
