aumento do tamnho da fonte do select de pais

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ div#list{
     height: 30px;
     width: 98%;
     border-radius: 7px;
+    font-size: medium;
 }
 div#check{
     font-weight: bold;
